--- a/server/client/experto.html
+++ b/server/client/experto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trader</title>
+    <title>Cric Sim</title>
 
     <link rel="stylesheet" href="css/lib/bootstrap.css">
     <link rel="stylesheet" href="css/lib/font-awesome.css">
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/lib/jquery-ui.css">
 
 
-    <!--    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>-->
-    <link rel="stylesheet" href="css/trader.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/mystyle.css">
     <style>
         body > div.col-md-2 > ul > li.active > a {
             background: #27ae60;
@@ -22,14 +22,18 @@
 
 </head>
 
-<body ng-app="trader-app" ng-controller="cntrl" style="background: #f3f3f3;
+<body ng-app="cricsim" ng-controller="cntrl" style="background: #f3f3f3;
     font-family: 'Lato', sans-serif;">
 
+
+
     <headerbar></headerbar>
+
 
     <div class="col-md-12">
         <div class="container-fluid">
             <div class="row">
+
 
                 <div ng-view class="col-sm-9 col-sm-offset-3 col-md-12 col-md-offset-0" style="    padding: 10px;">
 
@@ -37,6 +41,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-route.min.js"></script>
@@ -50,11 +58,18 @@
     <script src="js/lib/topojson.min.js"></script>
     <script src="js/lib/datamaps.world.min.js"></script>
 
-    <script src="js/trader/mockData.js"></script>
-    <script src="js/trader/util.js"></script>
-    <script src="js/trader/app.js"></script>
-    <script src="js/trader/controller.js"></script>
-    <script src="js/trader/directive.js"></script>
+
+
+    <script src="js/experto/mockData.js"></script>
+    <script src="js/experto/util.js"></script>
+    <script src="js/experto/app.js"></script>
+    <script src="js/experto/controller.js"></script>
+    <script src="js/experto/directive.js"></script>
+
+
+
+
+    
 
 </body>
 
