Result of several experiments

--- a/server/client/experto.html
+++ b/server/client/experto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cric Sim</title>
+    <title>Experto</title>
 
     <link rel="stylesheet" href="css/lib/bootstrap.css">
     <link rel="stylesheet" href="css/lib/font-awesome.css">
@@ -41,6 +41,9 @@
             </div>
         </div>
     </div>
+    
+    
+    <footerdiv></footerdiv>
 
 
 
