--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top" style="background: #34495e;
+<nav class="navbar navbar-fixed-top" style="background: #d8d8d8;
     color: white !important;">
     <div class="container-fluid" style="padding-right:0px;">
         <div class="navbar-header" style="">
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" style="font-size: 28px;letter-spacing: 5px;background: white;color:#34495e;" href="#/">CricSim</a>
+            <a class="navbar-brand" style="font-size: 28px;letter-spacing: 5px;background: white;color:#34495e;" href="#/">Experto</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
