Added list logic with mock data

--- a/server/client/html/experto/footer.html
+++ b/server/client/html/experto/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style="    position: absolute;
+<footer class="footer" style="    position: fixed;
     bottom: 0px;">
     <div class="container">
         <p class="text-muted">By Team Apptastic Four</p>
