--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav navbar-right">
 
 
-                <li><a href="#/match">Match</a></li>
+<!--                <li><a href="#/match">Match</a></li>-->
 
 
             </ul>
