lalanding page done

--- a/server/client/html/experto/landing.html
+++ b/server/client/html/experto/landing.html
@@ -1,7 +1,37 @@
-<div class="jumbotron" style="text-align: right;">
-  <h2>Super Charge
-<!--   your Email!-->
-   </h2>
-<br><br>
-  <p><a class="btn btn-primary btn-lg" href="#/login" role="button">Try Experto!</a></p>
+  <!--<div class="row" style="position:absolute;">
+      <div class="col-sm-12 col-md-12 bg_block">
+          <img src="./css/images/home_bg.jpg">
+      </div>
+  </div>-->
+  <div class="row home_main">
+   <style>
+       .navbar{
+           display: none;
+       }
+       body{
+           padding-top: 0px;
+           background-image: url(./css/images/home_bg.jpg) !important;
+           background-repeat: no-repeat;
+           background-size: 100% !important;
+           background-attachment: fixed;
+           background-position: bottom right; 
+       }
+       
+    </style>
+    
+    <div class="col-sm-8 col-md-8">
+        <div class="home_icon_big">
+            <img src="./css/images/home_big_icon.png">
+        </div>
+    </div>
+    <div class="col-sm-4 col-md-4 home_right_content">
+        <div class="home_intro">
+          <h2 class="intro_title">Experto</h2>
+          <p class="intro_content">Rediscover The True<br>Potential Of Your Contacts</p>
+          <div class="home_btn_google">
+              <span>Get Started With Google</span>
+              <span class="btn_icon"><img src="./css/images/google_g.png"></span>
+          </div>
+        </div>
+    </div>
 </div>
