--- a/server/client/html/experto/footer.html
+++ b/server/client/html/experto/footer.html
@@ -1,6 +1,9 @@
-<footer class="footer" style="    position: fixed;
-    bottom: 0px;">
-    <div class="container">
-        <p class="text-muted">By Team Apptastic Four</p>
+<footer class="footer">
+    <div class="container-fluid">
+       <div class="row">
+           <div class="col-md-12">
+               <div class="text-muted" style=" padding: 5px 0px; font-size: 15px;">By Team Apptastic Four</div>
+           </div>
+       </div>
     </div>
 </footer>
