--- a/server/client/html/experto/landing.html
+++ b/server/client/html/experto/landing.html
@@ -28,10 +28,12 @@
         <div class="home_intro">
           <h2 class="intro_title">Experto</h2>
           <p class="intro_content">Rediscover The True<br>Potential Of Your Contacts</p>
-          <div class="home_btn_google">
+          <a href="#/dashboard">
+             <div class="home_btn_google">
               <span>Get Started With Google</span>
               <span class="btn_icon"><img src="./css/images/google_g.png"></span>
           </div>
+            </a>
         </div>
     </div>
 </div>
