Latest style changes to dashboard

--- a/server/client/html/experto/auth.html
+++ b/server/client/html/experto/auth.html
@@ -43,8 +43,8 @@
                     <li>Smart Tagging Complete <span><i class="fa fa-check"></i></span></li>
                     <li>Finishing Things Up <span><i class="fa fa-check"></i></span></li>
                 </ul>
-                <div class="auth_btns">
-                    <a href="#" class="btn btn-white">Next <span><i class="fa fa-angle-right"></i></span> </a>
+                <div ng-show="showNext" class="auth_btns">
+                    <a href="#dashboard" class="btn btn-white">Next <span><i class="fa fa-angle-right"></i></span> </a>
                 </div>
             </div>
         </div>
