--- a/server/client/html/experto/uboard.html
+++ b/server/client/html/experto/uboard.html
@@ -30,7 +30,16 @@
 <div class="row dash_page">
         <div class="col-sm-4 col-md-4 ">
            <div class="in_block">
+               <div class="row">
+                   <div class="col-md-12">
+                   </div>
+               </div>
                
+               <div class="row">
+                   <div class="col-md-12">
+                       
+                   </div>
+               </div>
            </div>            
         </div>
         <div class="col-sm-4 col-md-4 ">
