added header menu items

--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -11,10 +11,13 @@
             <a class="navbar-brand" style="font-size: 28px;letter-spacing: 5px;background: white;color:#34495e;" href="#/">Experto</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" style="    margin-right: 020px;">
 
 
-<!--                <li><a href="#/match">Match</a></li>-->
+               
+                <li><a href="#/match">Echos</a></li>
+              
+                <li><a href="#/match">Logout</a></li>
 
 
             </ul>
