dashboard in progress

--- a/server/client/html/experto/dashboard.html
+++ b/server/client/html/experto/dashboard.html
@@ -29,7 +29,7 @@
 
     </div>
 -->
-    <div class="col-md-12 dash_page" style=argin:20px 0px;">
+    <div class="col-md-12 dash_page">
 
 <div class="col-md-4">
     <div style="padding:20px;background:#fff;">
