--- a/server/client/html/experto/dashboard.html
+++ b/server/client/html/experto/dashboard.html
@@ -2,6 +2,9 @@
     <style>
         body{
         }
+        .navbar {
+            margin: 0px !important;
+        }
 
     </style>
 
@@ -71,12 +74,24 @@
         </div>
         <div class="col-md-4">
 
-            <div class="detail_panel panel panel-default" style="height:90vh;">
-
-                <div class="col-md-12" style="text-align: center;">
-                    <i class="fa fa-user" aria-hidden="true" style="    font-size: 60px;
-    text-align: center;
-    padding: 40px;"></i>
+            <div class="detail_panel panel panel-default" style="height:90vh; padding:20px;">
+                
+                <div class="row">
+                    <div class="col-md-4">
+                        <div style="width:100%;display:block;tex-align:center;background:#333; height:100px">
+                            
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                       <h4>Yogananth Gopinathan</h4>                        
+                    </div>
+                </div>
+                <div class="row">
+                  <h3>General</h3>
+                   <div class="col-md-12">
+                   <h4>Personal Info</h4>
+                   <p >UI/ UX Designer</p>
+                   </div>                    
                 </div>
 
                 <div class="col-md-12" style="text-align:center;">
