--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -15,7 +15,7 @@
 
 
                
-                <li><a href="#/match">Echos</a></li>
+                <li><a href="#/echos">Echos</a></li>
               
                 <li><a href="#/match">Logout</a></li>
 
