--- a/server/client/experto.html
+++ b/server/client/experto.html
@@ -43,6 +43,7 @@
     <script src="js/lib/bootstrap.js"></script>
     <script src="js/lib/angular-google-maps.min.js"></script>
     <script src="js/lib/Chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
 
     <script src="js/lib/d3.min.js"></script>
     <script src="js/lib/topojson.min.js"></script>
