--- a/server/client/experto.html
+++ b/server/client/experto.html
@@ -44,11 +44,16 @@
     <script src="js/lib/angular-google-maps.min.js"></script>
     <script src="js/lib/Chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>-->
+    <script src="js/lib/socket.io.js"></script>
 
     <script src="js/lib/d3.min.js"></script>
     <script src="js/lib/topojson.min.js"></script>
     <script src="js/lib/datamaps.world.min.js"></script>
 
+<script>
+    var socket = io();
+    </script>
 
 
     <script src="js/experto/mockData.js"></script>
