--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -15,7 +15,20 @@
 
 
                
-                <li><a href="#/echos">Echos</a></li>
+                <li><a href="#/echos">Echos
+                    <span ng-show="echoCount != 0" style="color: #fff;
+    background: red;
+    border-radius: 40px;
+    /* padding: 3px; */
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: -30px;
+    right: -24px;
+    font-size: 10px;
+    display: block;
+    text-align: center;">{{echoCount}}</span>
+                </a></li>
               
                 <li><a href="#/match">Logout</a></li>
 
