--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" style="font-size: 28px;letter-spacing: 5px;background: white;color:#34495e;" href="#/">Experto</a>
+            <a class="navbar-brand" style="font-size: 28px;letter-spacing: 5px;background: white;color:#34495e;font-weight: bold;background: -webkit-linear-gradient(#0550E9, #C008E3 );-webkit-background-clip: text;-webkit-text-fill-color: transparent;" href="#/">Experto</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right" style="    margin-right: 020px;">
