--- a/server/client/html/experto/echos.html
+++ b/server/client/html/experto/echos.html
@@ -1,5 +1,4 @@
 <div class="row">
-
     <center>
         <h3>Echos</h3>
     </center>
@@ -42,54 +41,41 @@
 
         </div>
         <div class="col-md-8" style="height:88vh;background:#d8d8d8;">
+            <div class="row" style="padding:40px 50px;">
+                <div class="col-md-12">
 
-            <div class="col-md-12">
-
-                <div class="col-md-2" style="    background-image: url(u2.jpg);
-    height: 80px;
-    width: 80px;
-    margin-top: 5px;
-    background-size: contain;">
-
-
-
-                </div>
-                <div class="col-md-10">
-                    <h3>Yogananth</h3>
-
-                    <h4>UI/UX</h4>
+                    <div class="col-md-3" style=" background-image: url(u2.jpg); height: 150px; width: 150px; margin-top: 5px; background-size: contain; border:2px solid #fbfbfb">
+                    </div>
+                    <div class="col-md-8">
+                        <h3 style="
+    font-size: 30px;
+    color: #4537e7;
+">Yogananth</h3>
+                        <h4>UI/UX</h4>
+                    </div>
                 </div>
 
-
+                <div class="col-md-12" style="padding: 15px 15px;font-weight: 600;">
+                    <h3>Yoga is looking for a Angular Developer</h3>
+                    <h4>Here are some people in your contacts who has skills in Angular JS. You can sugest one of your expertee.</h4>
+                </div>
             </div>
-
-            <div class="col-md-12">
-
-
-                <h4>Yoga is looking for a Angular Developer</h4>
-            </div>
-
-
-
-            <div class="col-md-12">
-                Here are some people in your contacts who has skills in Angular JS
-            </div>
+            
 
             <div class="col-md-12">
                 <div ng-repeat="peep in peepArr" class="col-md-6" style="padding:0px;margin-top:10px;">
 
-                    <div class="col-md-10 col-md-offset-1" style="    background: #9b59b6;
-    padding: 20px;
-    color: #fff;">
+                    <div class="col-md-10 col-md-offset-1" style=" background: #fafafa; padding: 20px; color: #fff; border-radius: 9px;">
 
 
 
 
 
                         <!--                    <div class="row">-->
-                        <div class="col-md-8">username</div>
-                        <div class="col-md-4">
-                            <button class="btn btn-default" style="    background-image: url(UI-06.jpg);
+                        <div class="col-md-9" >
+                        <h4 style="color:#0152e9;font-size:1.5em; padding:5px 0px;">Sahaya Jeswin</h4>
+                        </div>
+                        <div class="col-md-3"><button class="btn btn-default" style="    background-image: url(UI-06.jpg);
     background-size: cover;
     height: 60px;
     border-radius: 14px;
