--- a/server/client/html/experto/headerBar.html
+++ b/server/client/html/experto/headerBar.html
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav navbar-right" style="    margin-right: 020px;">
 
 
-               
+<!--                <li><a href="#/dashboard/{{username}}">Dashboard</a></li>-->
                 <li><a href="#/echos">Echos
                     <span ng-show="echoCount != 0" style="color: #fff;
     background: red;
