--- a/server/client/html/experto/echos.html
+++ b/server/client/html/experto/echos.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-md-12" style=" font-size: 20px;
 ">
-                       Looking for {{m.message}}
+                       Looking for someone who has good {{m.message}} Skills
                         
                     </div>
                 </div>
