--- a/server/client/html/experto/auth.html
+++ b/server/client/html/experto/auth.html
@@ -44,7 +44,7 @@
                     <li>Finishing Things Up <span><i class="fa fa-check"></i></span></li>
                 </ul>
                 <div ng-show="showNext" class="auth_btns">
-                    <a href="#dashboard" class="btn btn-white">Next <span><i class="fa fa-angle-right"></i></span> </a>
+                    <a href="#dashboard/praveen" class="btn btn-white">Next <span><i class="fa fa-angle-right"></i></span> </a>
                 </div>
             </div>
         </div>
